<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.activity.DetailUserActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:theme="@style/ProgressbarWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_detailuser"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviews_avatardt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="80dp"
            app:layout_constraintBottom_toTopOf="@id/tv_usernamedt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_photodt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/image"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_usernamedt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_namedt"
            app:layout_constraintEnd_toEndOf="@id/cardviews_avatardt"
            app:layout_constraintStart_toStartOf="@id/cardviews_avatardt"
            app:layout_constraintTop_toBottomOf="@+id/cardviews_avatardt" />

        <TextView
            android:id="@+id/tv_namedt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/follower_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_usernamedt" />

        <LinearLayout
            android:id="@+id/repository_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/follower_layout"
            app:layout_constraintEnd_toStartOf="@+id/follower_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/follower_layout">

            <ImageView
                android:id="@+id/icon_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_repository"
                android:contentDescription="@string/icon_repository"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/reposiotry"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/icon_repo" />

                <TextView
                    android:id="@+id/tv_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/content_number"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/follower_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linebreak"
            app:layout_constraintEnd_toStartOf="@+id/following_layout"
            app:layout_constraintStart_toEndOf="@+id/repository_layout"
            app:layout_constraintTop_toBottomOf="@+id/tv_namedt">

            <ImageView
                android:id="@+id/icon_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_follow"
                android:contentDescription="@string/icon_followers"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/followers"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/icon_repo" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/content_number"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/following_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/follower_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/follower_layout"
            app:layout_constraintTop_toTopOf="@+id/follower_layout">

            <ImageView
                android:id="@+id/icon_following"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_point"
                android:contentDescription="@string/icon_following"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/following"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/icon_repo" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/content_number"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>


        <View
            android:id="@+id/linebreak"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/company_layout"
            app:layout_constraintEnd_toEndOf="@+id/following_layout"
            app:layout_constraintStart_toStartOf="@+id/repository_layout"
            app:layout_constraintTop_toBottomOf="@+id/follower_layout"
            app:layout_constraintWidth_percent="0.9" />


        <LinearLayout
            android:id="@+id/company_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/location_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linebreak">

            <ImageView
                android:id="@+id/icon_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_work"
                android:contentDescription="@string/icon_company"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/company"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_companydt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/content_string"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="11dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tab_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_layout">

            <ImageView
                android:id="@+id/icon_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_location"
                android:contentDescription="@string/icon_location"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/location"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_locationdt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/content_string"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_layout">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:backgroundTint="#165a72"
                app:tabIndicatorColor="#FFFFFF"
                app:tabIndicatorHeight="5dp"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

